--- a/index.html
+++ b/index.html
@@ -1,113 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title>json template generator</title>
-    <link rel='stylesheet' id='theme_stylesheet'>
-    <link rel='stylesheet' id='icon_stylesheet'>
-	<link rel='stylesheet' href='app/css/styles.css'>
-	
-</head>
-<body>
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        <img alt="LOGO" src="">
-      </a>
-    </div>
-  
-	<ul class="nav navbar-nav navbar-right">
-		<li><a class="fa fa-2x fa-cogs" id="modelBtn" href="#"></a></li>
-	</ul>
-</div>
-</nav>
-	<div id="modelDiv">
-		<h2>Timestamp generator</h2>
-			<label for="timestampGen">Enter date below<br>dd/MM/yyyy Format</label>
-			<input type="text" class="form-control" id="timestampGen" placeholder="09/07/2017">
-        <br>
-        <div class="result well"></div>
-		<button class='btn btn-default'  onClick="closeMdl()">Close</button>
-	</div>
-    <div class='row bound'>
-
-        <div class='col-md-8'>
-            <h2>Template</h2>
-            <div class='col-md-6'>
-			<button class='btn btn-default btn-block' id="setschema2">item</button>
-		</div>
-		<div class='col-md-6'>
-				<button class='btn btn-default btn-block' id="setschema3">post</button>
-				</div>				
-				<p>Below is the editor generated from the chosen JSON Schema.</p>
-            <div id='editor'></div>
-        </div>
-        <div class='col-md-4'>
-            <h2>JSON Output</h2>
-            <p>You can also make changes to the JSON here and set the value in the editor by clicking</p> 
-			<button class='btn btn-default btn-block' id='setvalue'>Update Form</button><br>
-            <textarea id='output' style='width: 100%; height: 300px; font-family: monospace;' class='form-control'></textarea>
-
-            <h2>Save to file</h2>
-			<div class="form-group">
-				<label for="input-fileName">File name</label>
-				<input type="text" class="form-control" id="input-fileName" value="template" placeholder="Enter file name">
-			</div>
-			<button class='btn btn-default btn-block' onClick="saveJson()" type="submit">Download</button>
-			<h2>Options</h2>
-            <div id='options_holder'>
-                <div>
-                    <label>CSS Framework</label>
-                    <select id='theme_switcher' class='form-control'></select>
-                </div>
-
-                <div>
-                    <label>Object Layout</label>
-                    <select id='object_layout' class='form-control'></select>
-                </div>
-                <div>
-                    <label>Show Errors</label>
-                    <select id='show_errors' class='form-control'></select>
-                </div>
-            </div>
-
-            <h2>Validation</h2>
-            <p>This will update whenever the form changes to show validation errors if there are any.</p>
-            <textarea id='validate' readonly disabled class='form-control'></textarea>
-			
-        </div>
-        <div class='row'>
-            <div class='col-md-12'>
-                <h2>Schema</h2>
-                <p>You can change the schema and see how the generated form looks.  After you make changes, click <button class='btn btn-default btn-block' id='setschema'>Update Schema</button></p>
-
-                <textarea id='schema' style='width: 100%; height: 450px; font-family: monospace;' class='form-control'></textarea>
-				<h2>Save schema to file</h2>
-				<div class="form-group">
-					<label for="schema-fileName">File name</label>
-					<input type="text" class="form-control" id="schema-fileName" value="Schema" placeholder="Enter file name">
-				  </div>
-				  <button class='btn btn-default btn-block'  onClick="saveSchema()" type="submit">Download</button>
-            </div>
-        </div>
-    </div>
-<nav class="navbar navbar-inverse btm">
-  <div class="container">
-		<h5 class="center">2017 Ben eaves</h5>
-  </div>
-</nav>
-<!--dev
-<script src="app/js/json2html.js"></script>
-<script src="app/js/data.js"></script>
-<script src="app/js/templates.js"></script>
-<script src="app/js/init.js"></script>
-<script src='app/js/editor.js'></script>
-<script src="app/js/FileSaver.js"></script>
-<script src="app/js/post.js"></script>
-<script src="app/js/item.js"></script>
-<script src="app/js/app.js"></script>
--->
-<script src="app/js/app.min.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>json template generator</title><link rel="stylesheet" id="theme_stylesheet"><link rel="stylesheet" id="icon_stylesheet"><link rel="stylesheet" href="app/css/styles.css"></head><body><nav class="navbar navbar-inverse"><div class="container-fluid"><div class="navbar-header"><a class="navbar-brand" href="#"><img alt="LOGO" src=""></a></div><ul class="nav navbar-nav navbar-right"><li><a class="fa fa-2x fa-cogs" id="modelBtn" href="#"></a></li></ul></div></nav><div id="modelDiv"><h2>Timestamp generator</h2><label for="timestampGen">Enter date below<br>dd/MM/yyyy Format</label><input type="text" class="form-control" id="timestampGen" placeholder="09/07/2017"><br><div class="result well"></div><button class="btn btn-default" onclick="closeMdl()">Close</button></div><div class="row bound"><div class="col-md-8"><h2>Template</h2><div class="col-md-6"><button class="btn btn-default btn-block" id="setschema2">item</button></div><div class="col-md-6"><button class="btn btn-default btn-block" id="setschema3">post</button></div><p>Below is the editor generated from the chosen JSON Schema.</p><div id="editor"></div></div><div class="col-md-4"><h2>JSON Output</h2><p>You can also make changes to the JSON here and set the value in the editor by clicking</p><button class="btn btn-default btn-block" id="setvalue">Update Form</button><br><textarea id="output" style="width: 100%; height: 300px; font-family: monospace" class="form-control"></textarea><h2>Save to file</h2><div class="form-group"><label for="input-fileName">File name</label><input type="text" class="form-control" id="input-fileName" value="template" placeholder="Enter file name"></div><button class="btn btn-default btn-block" onclick="saveJson()" type="submit">Download</button><h2>Options</h2><div id="options_holder"><div><label>CSS Framework</label><select id="theme_switcher" class="form-control"></select></div><div><label>Object Layout</label><select id="object_layout" class="form-control"></select></div><div><label>Show Errors</label><select id="show_errors" class="form-control"></select></div></div><h2>Validation</h2><p>This will update whenever the form changes to show validation errors if there are any.</p><textarea id="validate" readonly="readonly" disabled="disabled" class="form-control"></textarea></div><div class="row"><div class="col-md-12"><h2>Schema</h2><p>You can change the schema and see how the generated form looks. After you make changes, click <button class="btn btn-default btn-block" id="setschema">Update Schema</button></p><textarea id="schema" style="width: 100%; height: 450px; font-family: monospace" class="form-control"></textarea><h2>Save schema to file</h2><div class="form-group"><label for="schema-fileName">File name</label><input type="text" class="form-control" id="schema-fileName" value="Schema" placeholder="Enter file name"></div><button class="btn btn-default btn-block" onclick="saveSchema()" type="submit">Download</button></div></div></div><nav class="navbar navbar-inverse btm"><div class="container"><h5 class="center">2017 Ben eaves</h5></div></nav><!--dev<script src="app/js/json2html.js"></script><script src="app/js/data.js"></script><script src="app/js/templates.js"></script><script src="app/js/init.js"></script><script src='app/js/editor.js'></script><script src="app/js/FileSaver.js"></script><script src="app/js/post.js"></script><script src="app/js/item.js"></script><script src="app/js/app.js"></script>--><script src="app/js/app.min.js"></script></body></html>
